--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
     <div class="container mt-5">
-        <h1 class="text-center">Welcome, {{ username }}!</h1>
-        <div class="d-flex justify-content-center mt-4">
-            <a href="{{ url_for('add_task') }}" class="btn btn-primary mx-2">Add Tasks</a>
-            <a href="{{ url_for('view_tasks') }}" class="btn btn-secondary mx-2">View Tasks</a>
-        </div>
+      <h1 class="text-center">Welcome, {{ username }}!</h1>
+      <p class="text-center mt-3">
+        Wallet Balance: ₹{{ walletamount }} <br />
+        Captchas Used: {{ captchaused }}
+      </p>
+      <div class="d-flex justify-content-center mt-4">
+        <a href="{{ url_for('add_task') }}" class="btn btn-primary mx-2"
+          >Add Tasks</a
+        >
+        <a href="{{ url_for('add_task1') }}" class="btn btn-primary mx-2"
+        >Add Tasks Check and Book</a
+      >
+        <a href="{{ url_for('view_tasks') }}" class="btn btn-secondary mx-2"
+          >View Tasks</a
+        >
+      </div>
     </div>
-</body>
+  </body>
 </html>
