--- a/templates/view_tasks.html
+++ b/templates/view_tasks.html
@@ -174,7 +174,7 @@
               "Killed" %}
               <button
                 class="reschedule-btn"
-                onclick="rescheduleTask({{ task.id }}, '{{ task.applications }}', '{{ task.dob }}', '{{ task.name }}', '{{ task.cov }}', '{{ task.scheduled_date }}')"
+                onclick="rescheduleTask({{ task.id }}, '{{ task.applications }}', '{{ task.dob }}', '{{ task.name }}', '{{ task.cov }}', '{{ task.slotdate }}')"
               >
                 Reschedule
               </button>
